--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -3,7 +3,7 @@
     "version": "<%= version %>",
     "description": "<%= description %>",
     "keywords": <%- keywords %>,
-    "author": "<%= author_name %> <<%= author_email%>",
+    "author": "<%= author_name %> <<%= author_email%>>",
     "license": "<%= license %>",
     "repository": {
         "type": "git",
