--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -8,5 +8,13 @@
     "repository": {
         "type": "git",
         "url": "<%= repository %>"
-    }
+    },
+    "files": [
+        "index.d.ts",
+        "index.js",
+        "index.js.map",
+        "lib/**/*.js",
+        "lib/**/*.js.map",
+        "lib/**/*.d.ts"
+    ]
 }
