--- a/generators/app/templates/Gruntfile.js.ejs
+++ b/generators/app/templates/Gruntfile.js.ejs
@@ -1,140 +1,142 @@
 module.exports = function (grunt) {
 
-    grunt.initConfig({
-        tslint: {
-            options: {
-                configuration: 'tslint.json'
-            },
-            files: {
-                src: [
-                    'index.ts',
-                    'test/**/*.ts',
-                    '!index.d.ts',
-                    '!test/**/*.d.ts'
-                ]
-            }
-        },
-        clean: {
-            coverage: ['test/coverage']<% if (typedoc) { %>,
-            doc: ['docs']<% } %>
-        },
-        ts: {
-            default: {
-                tsconfig: true
-            }
-        },
-        copy: {
-            test: {
-                files: {
-                    'test/coverage/instrument/': 'test/**/*.js'
-                },
-                options: {
-                    expand: true
-                }
-            }
-        },
-        instrument: {
-            files: ['index.js', 'lib/**/*.js'],
-            options: {
-                lazy: true,
-                basePath: 'test/coverage/instrument/'
-            }
-        },
-        mochaTest: {
-            test: {
-                options: {
-                    reporter: 'spec',
-                    quiet: false
-                },
-                src: ['test/coverage/instrument/test/**/*.js']
-            }
-        },
-        storeCoverage: {
-            options: {
-                dir: 'test/coverage/reports'
-            }
-        },
-        remapIstanbul: {
-            build: {
-                src: 'test/coverage/reports/coverage.json',
-                options: {
-                    reports: {
-                        'json': 'test/coverage/reports/coverage-mapped.json'
-                    }
-                }
-            }
-        },
-        makeReport: {
-            src: 'test/coverage/reports/coverage-mapped.json',
-            options: {
-                type: 'lcov',
-                dir: 'test/coverage/reports',
-                print: 'detail'
-            }
-        }<% if (typedoc) { %>,
-        typedoc: {
-            default: {
-                options: {
-                    out: 'docs/',
-                    name: '<%= name %>',
-                    readme: 'README.md'
-                },
-                src: ['index.ts']
-            }
-        }<% } %>
-    });
-
-    grunt.loadNpmTasks('grunt-ts');
-    grunt.loadNpmTasks('grunt-tslint');
-    grunt.loadNpmTasks('grunt-mocha-test');
-    grunt.loadNpmTasks('grunt-istanbul');
-    grunt.loadNpmTasks('remap-istanbul');
-    grunt.loadNpmTasks('grunt-contrib-clean');
-    grunt.loadNpmTasks('grunt-contrib-copy');<% if (typedoc) { %>
-    grunt.loadNpmTasks('grunt-typedoc');<% } %>
-
-    grunt.registerTask(
-        'build',
-        [
-            'tslint',
-            'ts'
+  grunt.initConfig({
+    tslint: {
+      options: {
+        configuration: 'tslint.json'
+      },
+      files: {
+        src: [
+          'index.ts',
+          'lib/**/*.ts',
+          'test/**/*.ts',
+          '!index.d.ts',
+          '!lib/**/*.d.ts',
+          '!test/**/*.d.ts'
         ]
-    );
+      }
+    },
+    clean: {
+      coverage: ['test/coverage']<% if (typedoc) { %>,
+      doc: ['docs']<% } %>
+    },
+    ts: {
+      default: {
+        tsconfig: true
+      }
+    },
+    copy: {
+      test: {
+        files: {
+          'test/coverage/instrument/': 'test/**/*.js'
+        },
+        options: {
+          expand: true
+        }
+      }
+    },
+    instrument: {
+      files: ['index.js', 'lib/**/*.js'],
+      options: {
+        lazy: true,
+        basePath: 'test/coverage/instrument/'
+      }
+    },
+    mochaTest: {
+      test: {
+        options: {
+          reporter: 'spec',
+          quiet: false
+        },
+        src: ['test/coverage/instrument/test/**/*.js']
+      }
+    },
+    storeCoverage: {
+      options: {
+        dir: 'test/coverage/reports'
+      }
+    },
+    remapIstanbul: {
+      build: {
+        src: 'test/coverage/reports/coverage.json',
+        options: {
+          reports: {
+            'json': 'test/coverage/reports/coverage-mapped.json'
+          }
+        }
+      }
+    },
+    makeReport: {
+      src: 'test/coverage/reports/coverage-mapped.json',
+      options: {
+        type: 'lcov',
+        dir: 'test/coverage/reports',
+        print: 'detail'
+      }
+    }<% if (typedoc) { %>,
+    typedoc: {
+      default: {
+        options: {
+          out: 'docs/',
+          name: '<%= name %>',
+          readme: 'README.md'
+        },
+        src: ['index.ts']
+      }
+    }<% } %>
+  })
 
-    grunt.registerTask(
-        'default',
-        [
-            'build'
-        ]
-    );<% if (typedoc) { %>
-    grunt.registerTask(
-        'doc',
-        [
-            'clean:doc',
-            'typedoc'
-        ]
-    );<% } %>
+  grunt.loadNpmTasks('grunt-ts')
+  grunt.loadNpmTasks('grunt-tslint')
+  grunt.loadNpmTasks('grunt-mocha-test')
+  grunt.loadNpmTasks('grunt-istanbul')
+  grunt.loadNpmTasks('remap-istanbul')
+  grunt.loadNpmTasks('grunt-contrib-clean')
+  grunt.loadNpmTasks('grunt-contrib-copy')<% if (typedoc) { %>
+  grunt.loadNpmTasks('grunt-typedoc')<% } %>
 
-    grunt.registerTask(
-        'test',
-        [
-            'build',
-            'clean:coverage',
-            'copy:test',
-            'instrument',
-            'mochaTest:test',
-            'storeCoverage',
-            'remapIstanbul',
-            'makeReport'
-        ]
-    );
+  grunt.registerTask(
+    'build',
+    [
+      'tslint',
+      'ts'
+    ]
+  )
 
-    grunt.registerTask(
-        'release',
-        [
-            'test'<% if (typedoc) { %>,
-            'doc'<% } %>
-        ]
-    );
+  grunt.registerTask(
+    'default',
+    [
+      'build'
+    ]
+  )<% if (typedoc) { %>
+  grunt.registerTask(
+    'doc',
+    [
+      'clean:doc',
+      'typedoc'
+    ]
+  )<% } %>
 
-};
+  grunt.registerTask(
+    'test',
+    [
+      'build',
+      'clean:coverage',
+      'copy:test',
+      'instrument',
+      'mochaTest:test',
+      'storeCoverage',
+      'remapIstanbul',
+      'makeReport'
+    ]
+  )
+
+  grunt.registerTask(
+    'release',
+    [
+      'test'<% if (typedoc) { %>,
+      'doc'<% } %>
+    ]
+  )
+
+}
