--- a/generators/app/templates/ModuleTest.ts.ejs
+++ b/generators/app/templates/ModuleTest.ts.ejs
@@ -1,13 +1,14 @@
 import 'mocha'
 import chai = require('chai')
 import { ExampleClass } from '../index'
-<% if (promise) { %>import chaiAsPromised = require('chai-as-promised')
+<% if (promise) { %>import Bluebird = require('bluebird')
+import chaiAsPromised = require('chai-as-promised')
 chai.use(chaiAsPromised)
 <% } %>
 describe(
-  'My class', function () {
+  'My class', function (): void {
     let subject = new ExampleClass()
-    it('should greet me', function () {
+    it('should greet me', function ()<% if (promise) { %>: Bluebird<void><% } else { %>: void<% } %> {
       <% if (promise) { %>return subject.helloWorld('friend')
         .then(
           greet => {
@@ -27,10 +28,15 @@ describe(
         'Hello friend'
       )
     <% } %>})
-    it('should fail greeting nobody', function () {
-      <% if (promise) { %>return chai.expect(
-        subject.helloWorld('')
-      ).to.be.rejectedWith('Found nobody to greet')<% } else { %>let greet =
+    it('should fail greeting nobody', function ()<% if (promise) { %>: Bluebird<void><% } else { %>: void<% } %> {
+      <% if (promise) { %>return Bluebird.resolve()
+        .then(
+          () => {
+            return chai.expect(
+            subject.helloWorld('')
+            ).to.be.rejectedWith('Found nobody to greet')
+          }
+        )<% } else { %>let greet =
         chai.expect(
           subject.helloWorld.bind(null, '')
         ).to.throw('Found nobody to greet')<% } %>
