fix: Corrected prettier configuration and templates

--- a/generators/app/templates/ModuleTest.ts.ejs
+++ b/generators/app/templates/ModuleTest.ts.ejs
@@ -5,21 +5,20 @@ import { ExampleClass } from '../index'
 import chaiAsPromised = require('chai-as-promised')
 chai.use(chaiAsPromised)
 <% } %>
-describe(
-  'My class', function (): void {
-    let subject = new ExampleClass()
-    it('should greet me', function ()<% if (promise) { %>: Bluebird<void><% } else { %>: void<% } %> {
-      <% if (promise) { %>return subject.helloWorld('friend')
-        .then(
-          greet => {
-            chai.expect(
-              greet,
-              'Invalid greeting'
-            ).to.equal(
-              'Hello friend'
-            )
-          }
-        )
+describe('My class', function (): void {
+  let subject = new ExampleClass()
+  it('should greet me', function ()<% if (promise) { %>: Bluebird<void><% } else { %>: void<% } %> {
+    <% if (promise) { %>return subject.helloWorld('friend')
+      .then(
+        greet => {
+          chai.expect(
+            greet,
+            'Invalid greeting'
+          ).to.equal(
+            'Hello friend'
+          )
+        }
+      )
     <% } else { %>let greet = subject.helloWorld('friend')
       chai.expect(
         greet,
@@ -27,19 +26,18 @@ describe(
       ).to.equal(
         'Hello friend'
       )
-    <% } %>})
-    it('should fail greeting nobody', function ()<% if (promise) { %>: Bluebird<void><% } else { %>: void<% } %> {
-      <% if (promise) { %>return Bluebird.resolve()
-        .then(
-          () => {
-            return chai.expect(
+  <% } %>})
+  it('should fail greeting nobody', function ()<% if (promise) { %>: Bluebird<void><% } else { %>: void<% } %> {
+    <% if (promise) { %>return Bluebird.resolve()
+      .then(
+        () => {
+          return chai.expect(
             subject.helloWorld('')
-            ).to.be.rejectedWith('Found nobody to greet')
-          }
-        )<% } else { %>let greet =
+          ).to.be.rejectedWith('Found nobody to greet')
+        }
+      )<% } else { %>let greet =
         chai.expect(
           subject.helloWorld.bind(null, '')
         ).to.throw('Found nobody to greet')<% } %>
-    })
-  }
-)
+  })
+})
