--- a/generators/app/templates/index.ts.ejs
+++ b/generators/app/templates/index.ts.ejs
@@ -13,13 +13,12 @@ import Bluebird = require('bluebird')<% } %>
  * <%= name %> - <%= description %>
  */
 export class ExampleClass {
-
   /**
    * Use a logger instance to log, what you're doing
    */
   private _log: loglevel.Logger = null
 
-  constructor () {
+  constructor() {
     this._log = loglevel.getLogger('<%= name %>:ExampleClass')
   }
 <% if (promise) { %>
@@ -33,8 +32,7 @@ export class ExampleClass {
       return Bluebird.reject(new Error('Found nobody to greet'))
     }
     return Bluebird.resolve(`Hello ${name}`)
-  }
-<% } else { %>
+  }<% } else { %>
   /**
    * Be nice.
    * @param {string} name Who are you?
@@ -45,6 +43,5 @@ export class ExampleClass {
       throw new Error('Found nobody to greet')
     }
     return `Hello ${name}`
-  }
-<% } %>
+  }<% } %>
 }
